treewide: Backport translations and sync
Backport from master and sync translations.

Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/applications/luci-app-commands/po/zh-cn/commands.po
+++ b/applications/luci-app-commands/po/zh-cn/commands.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2021-01-05 13:29+0000\n"
+"PO-Revision-Date: 2021-04-03 04:26+0000\n"
 "Last-Translator: Eric <spice2wolf@gmail.com>\n"
 "Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationscommands/zh_Hans/>\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.4.1-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "A short textual description of the configured command"
 msgstr "简短描述命令用途"
@@ -70,7 +70,7 @@ msgid "Custom arguments"
 msgstr "自定义参数"
 
 msgid "Dashboard"
-msgstr "看板"
+msgstr "控制面板"
 
 msgid "Description"
 msgstr "描述"
