--- a/modules/luci-base/po/ja/base.po
+++ b/modules/luci-base/po/ja/base.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-06-10 03:40+0200\n"
-"PO-Revision-Date: 2021-03-29 14:26+0000\n"
+"PO-Revision-Date: 2021-04-03 04:26+0000\n"
 "Last-Translator: INAGAKI Hiroshi <musashino.open@gmail.com>\n"
 "Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/luci/ja/"
 ">\n"
@@ -601,7 +601,7 @@ msgid "Changes the administrator password for accessing the device"
 msgstr "デバイスにアクセスするための管理者パスワードを変更"
 
 msgid "Channel"
-msgstr "チャネル"
+msgstr "チャンネル"
 
 msgid "Check"
 msgstr "チェック"
@@ -692,7 +692,7 @@ msgid "Connect"
 msgstr "接続"
 
 msgid "Connected"
-msgstr "接続済み"
+msgstr "接続中"
 
 msgid "Connection Limit"
 msgstr "接続制限"
@@ -1192,7 +1192,7 @@ msgid "Firmware File"
 msgstr "ファームウェアファイル"
 
 msgid "Firmware Version"
-msgstr "ファームウェアバージョン"
+msgstr "ファームウェア バージョン"
 
 msgid "Fixed source port for outbound DNS queries"
 msgstr "DNSクエリを送信する送信元ポートを固定"
@@ -1474,7 +1474,7 @@ msgid "IPv6 only"
 msgstr "IPv6のみ"
 
 msgid "IPv6 prefix"
-msgstr "IPv6プレフィックス"
+msgstr "IPv6 プレフィックス"
 
 msgid "IPv6 prefix length"
 msgstr "IPv6プレフィックス長"
@@ -1673,7 +1673,7 @@ msgid "Kernel Log"
 msgstr "カーネルログ"
 
 msgid "Kernel Version"
-msgstr "カーネルバージョン"
+msgstr "カーネル バージョン"
 
 msgid "Key"
 msgstr "キー"
