--- a/modules/luci-base/po/uk/base.po
+++ b/modules/luci-base/po/uk/base.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"PO-Revision-Date: 2020-12-23 13:29+0000\n"
-"Last-Translator: Vladyslav Khrypchenko <khrypchenko.vlad@gmail.com>\n"
+"PO-Revision-Date: 2021-04-03 15:03+0000\n"
+"Last-Translator: Yurii Petrashko <yuripet@gmail.com>\n"
 "Language-Team: Ukrainian <https://hosted.weblate.org/projects/openwrt/luci/"
 "uk/>\n"
 "Language: uk\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.4.1-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "%s is untagged in multiple VLANs!"
 msgstr "%s є непозначеним у декількох VLAN!"
@@ -102,7 +102,7 @@ msgid ""
 "<abbr title=\"Domain Name System\">DNS</abbr> servers will be queried in the "
 "order of the resolvfile"
 msgstr ""
-"<abbr title=\"Domain Name System\">DNS</abbr> сервери будуть запитуватись в "
+"<abbr title=\"Domain Name System\">DNS</abbr> сервери буде опитано в "
 "порядку, визначеному файлом <em>resolvfile</em>"
 
 msgid "<abbr title=\"Extended Service Set Identifier\">ESSID</abbr>"
@@ -288,7 +288,7 @@ msgid "Administration"
 msgstr "Адміністрування"
 
 msgid "Advanced Settings"
-msgstr "Розширені налаштування"
+msgstr "Додаткові налаштування"
 
 msgid "Aggregate Transmit Power(ACTATP)"
 msgstr "Сукупна потужність передавача"
@@ -307,7 +307,7 @@ msgstr "Виділяти IP послідовно"
 msgid "Allow <abbr title=\"Secure Shell\">SSH</abbr> password authentication"
 msgstr ""
 "Дозволити <abbr title=\"Secure Shell — безпечна оболонка\">SSH</abbr>-"
-"перевірку пароля"
+"автентифікацію за допомогою пароля"
 
 msgid "Allow all except listed"
 msgstr "Дозволити всі, крім зазначених"
@@ -1188,7 +1188,7 @@ msgid ""
 "Find all currently attached filesystems and swap and replace configuration "
 "with defaults based on what was detected"
 msgstr ""
-"Знайти всі файлові системи та свопи, які наразі підключено і замінити "
+"Знайти всі файлові системи та свопи, які наразі приєднано і замінити "
 "конфігурацію типовою на підставі того, що було виявлено"
 
 msgid "Find and join network"
@@ -1302,7 +1302,7 @@ msgid "Gateway ports"
 msgstr "Порти шлюзу"
 
 msgid "General Settings"
-msgstr "Головні налаштування"
+msgstr "Загальні налаштування"
 
 msgid "General Setup"
 msgstr "Загальні налаштування"
@@ -1789,7 +1789,7 @@ msgid "Line Uptime"
 msgstr "Час безперервної роботи лінії"
 
 msgid "Link On"
-msgstr "Зв'язок встановлено"
+msgstr "З'єднання встановлено"
 
 msgid ""
 "List of <abbr title=\"Domain Name System\">DNS</abbr> servers to forward "
@@ -2059,7 +2059,7 @@ msgid ""
 "Mount Points define at which point a memory device will be attached to the "
 "filesystem"
 msgstr ""
-"Точки монтування визначають, до якої точки пристрою пам'яті буде прикріплено "
+"Точки монтування визначають, до якої точки пристрою пам'яті буде приєднано "
 "файлову систему"
 
 msgid "Mount filesystems not specifically configured"
@@ -2195,7 +2195,7 @@ msgid "None"
 msgstr "Жоден"
 
 msgid "Normal"
-msgstr "Нормальний"
+msgstr "Нормальна"
 
 msgid "Not Found"
 msgstr "Не знайдено"
@@ -2225,10 +2225,10 @@ msgid "OPKG-Configuration"
 msgstr "Конфігурація OPKG"
 
 msgid "Obfuscated Group Password"
-msgstr "Обфусований груповий пароль"
+msgstr "Заплутаний груповий пароль"
 
 msgid "Obfuscated Password"
-msgstr "Обфусований пароль"
+msgstr "Заплутаний пароль"
 
 msgid "Off-State Delay"
 msgstr "Затримка Off-State"
@@ -3077,7 +3077,7 @@ msgid "Specifies the button state to handle"
 msgstr "Визначає стан кнопки для обробки"
 
 msgid "Specifies the directory the device is attached to"
-msgstr "Визначає каталог, до якого приєднаний пристрій"
+msgstr "Визначає каталог, до якого приєднано пристрій"
 
 msgid "Specifies the listening port of this <em>Dropbear</em> instance"
 msgstr "Визначає порт прослуховування цієї реалізації <em>Dropbear</em>"
@@ -4016,7 +4016,7 @@ msgid "time units (TUs / 1.024 ms) [1000-65535]"
 msgstr "одиниці часу (TUs / 1.024 ms) [1000-65535]"
 
 msgid "unknown"
-msgstr "невідомий"
+msgstr "невідомо"
 
 msgid "unlimited"
 msgstr "необмежено"
