--- a/applications/luci-app-ahcp/po/cs/ahcp.po
+++ b/applications/luci-app-ahcp/po/cs/ahcp.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-02-04 05:03+0000\n"
-"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
+"PO-Revision-Date: 2021-04-09 08:04+0000\n"
+"Last-Translator: Pavel Pernička <pernicka.pa@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsahcp/cs/>\n"
 "Language: cs\n"
@@ -10,12 +10,11 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Weblate 3.11-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "AHCP Server"
 msgstr "AHCP Server"
 
-#, fuzzy
 msgid ""
 "AHCP is an autoconfiguration protocol for IPv6 and dual-stack IPv6/IPv4 "
 "networks designed to be used in place of router discovery or DHCP on "
@@ -24,8 +23,9 @@ msgid ""
 msgstr ""
 "AHCP je autokonfigurační protokol pro IPv6 a dual-stack IPv6/IPv4 sítě, "
 "vytvořený pro použití vedle funkcí router discovery (Vyhledávání směrovačů "
-"pomocí ICMP zpráv) a DHCP na sítích kde je obtížné či nemožné nakonfigurovat "
-"server v každé vrstvě broadcast domény, například mobilní ad-hoc sítě."
+"pomocí ICMP zpráv) a DHCP na sítích, kde je obtížné či nemožné "
+"nakonfigurovat server v každé vrstvě broadcast domény, například mobilní ad-"
+"hoc sítě."
 
 msgid "Active AHCP Leases"
 msgstr "Aktivní AHCP zapůjčení"
