--- a/applications/luci-app-firewall/po/it/firewall.po
+++ b/applications/luci-app-firewall/po/it/firewall.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-30 17:00+0200\n"
-"PO-Revision-Date: 2021-03-15 10:03+0000\n"
+"PO-Revision-Date: 2021-04-06 18:08+0000\n"
 "Last-Translator: Giovanni Giacobbi <giovanni@giacobbi.net>\n"
 "Language-Team: Italian <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsfirewall/it/>\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.5.2-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "%s in %s"
 msgstr ""
@@ -48,7 +48,7 @@ msgid "Accept input"
 msgstr "Accetta input"
 
 msgid "Action"
-msgstr "Action"
+msgstr "Azione"
 
 msgid "Add"
 msgstr "Aggiungi"
@@ -133,7 +133,7 @@ msgid "External IP address"
 msgstr "Indirizzo IP Esterno"
 
 msgid "External port"
-msgstr "Porta Esterna"
+msgstr "Porta esterna"
 
 msgid "External zone"
 msgstr "Zona Esterna"
