--- a/applications/luci-app-minidlna/po/uk/minidlna.po
+++ b/applications/luci-app-minidlna/po/uk/minidlna.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-12-15 16:29+0000\n"
-"Last-Translator: Jey Maluy <tizen48@gmail.com>\n"
+"PO-Revision-Date: 2021-04-07 16:28+0000\n"
+"Last-Translator: Tymofij Lytvynenko <till.svit@gmail.com>\n"
 "Language-Team: Ukrainian <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsminidlna/uk/>\n"
 "Language: uk\n"
@@ -11,10 +11,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "Advanced Settings"
-msgstr "Розширені налаштування"
+msgstr "Додаткові налаштування"
 
 msgid "Album art names:"
 msgstr ""
@@ -50,7 +50,7 @@ msgid "Friendly name:"
 msgstr ""
 
 msgid "General Settings"
-msgstr "Головні налаштування"
+msgstr "Загальні налаштування"
 
 msgid "Interfaces:"
 msgstr ""
@@ -135,7 +135,7 @@ msgstr ""
 
 msgid ""
 "Set this to enable inotify monitoring to automatically discover new files."
-msgstr ""
+msgstr "Увімкніть 'inotify' для автоматичного виявлення нових файлів."
 
 msgid ""
 "Set this to enable support for streaming .jpg and .mp3 files to a TiVo "
@@ -149,6 +149,10 @@ msgid ""
 "downscaling of very large JPEG images, which may hurt JPEG serving "
 "performance on (at least) Sony DLNA products."
 msgstr ""
+"Виберіть для суворого дотримання стандартів DLNA. Це дозволить зменшити "
+"розмір занадто великих JPEG-зображень на стороні сервера (наприклад "
+"технологія - Sony DLNA), щоб допомогти зменшити навантаження на ваш "
+"маршрутизатор."
 
 msgid ""
 "Set this to the directory you want scanned. If you want to restrict the "
@@ -156,6 +160,11 @@ msgid ""
 "audio, 'V' for video, 'P' for images), followed by a comma, to the directory "
 "(eg. A,/mnt/media/Music). Multiple directories can be specified."
 msgstr ""
+"Виберіть каталог, який необхідно зчитати. Якщо ви хочете вибрати в каталозі "
+"тільки відео або музику, ви повинні додати букву ('A' для аудіо, 'V' для "
+"відео, 'P' для зображень) перед зазначенням шляху до каталогу, за буквою "
+"слідує кома (пишеться так, наприклад: A,/mnt/media/Music). Можна вибрати "
+"відразу кілька каталогів."
 
 msgid "Specify the path to the MiniSSDPd socket."
 msgstr "Вкажіть шлях до сокета MiniSSDPd."
@@ -170,12 +179,15 @@ msgid ""
 "The miniDLNA service is active, serving %d audio, %d video and %d image "
 "files."
 msgstr ""
+"Служба miniDLNA запущена, сервер обслуговує %d аудіо-, %d відео- та %d файл "
+"(ів) зображень."
 
 msgid "The miniDLNA service is not running."
 msgstr "Сервіс miniDLNA не запущено."
 
 msgid "This is a list of file names to check for when searching for album art."
 msgstr ""
+"Цей список назв файлів використовується для пошуку обкладинок альбомів."
 
 msgid "Video"
 msgstr "Відео"
