--- a/applications/luci-app-netdata/po/zh-cn/netdata.po
+++ b/applications/luci-app-netdata/po/zh-cn/netdata.po
@@ -1,5 +1,5 @@
 msgid ""
-msgstr "Content-Type: text/plain; charset=UTF-8"
+msgstr "Content-Type: text/plain; charset=UTF-8\n"
 
 msgid "NetData"
 msgstr "实时监控"
