--- a/applications/luci-app-olsr/po/tr/olsr.po
+++ b/applications/luci-app-olsr/po/tr/olsr.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2021-01-30 09:06+0000\n"
-"Last-Translator: Mete <selimmeteozdogan@gmail.com>\n"
+"PO-Revision-Date: 2021-04-03 04:26+0000\n"
+"Last-Translator: Muhep Atasoy <muhepatasoy06@gmail.com>\n"
 "Language-Team: Turkish <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsolsr/tr/>\n"
 "Language: tr\n"
@@ -10,10 +10,10 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.5-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "Active MID announcements"
-msgstr ""
+msgstr "MID duyurularını etkinleştir"
 
 msgid "Active OLSR nodes"
 msgstr ""
