--- a/applications/luci-app-polipo/po/uk/polipo.po
+++ b/applications/luci-app-polipo/po/uk/polipo.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-10-27 21:26+0000\n"
-"Last-Translator: Yevhen Chebotarev <gekinadres@gmail.com>\n"
+"PO-Revision-Date: 2021-04-04 07:26+0000\n"
+"Last-Translator: Yurii Petrashko <yuripet@gmail.com>\n"
 "Language-Team: Ukrainian <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationspolipo/uk/>\n"
 "Language: uk\n"
@@ -11,10 +11,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.3.2-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "Advanced Settings"
-msgstr "Розширені налаштування"
+msgstr "Додаткові налаштування"
 
 msgid "Allowed clients"
 msgstr ""
@@ -52,7 +52,7 @@ msgid "First PMM segment size (in bytes)"
 msgstr ""
 
 msgid "General Settings"
-msgstr "Головні налаштування"
+msgstr "Загальні налаштування"
 
 msgid "How much RAM should Polipo use for its cache."
 msgstr ""
