--- a/applications/luci-app-splash/po/tr/splash.po
+++ b/applications/luci-app-splash/po/tr/splash.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2021-01-03 17:29+0000\n"
+"PO-Revision-Date: 2021-04-09 08:04+0000\n"
 "Last-Translator: Oğuz Ersen <oguzersen@protonmail.com>\n"
 "Language-Team: Turkish <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationssplash/tr/>\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.4.1-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "Accept"
 msgstr ""
@@ -123,7 +123,7 @@ msgid "Hostname"
 msgstr "Sunucu adı"
 
 msgid "IP Address"
-msgstr ""
+msgstr "IP Adresi"
 
 msgid ""
 "If you operate your own wifi equipment use channels different from ours."
