--- a/applications/luci-app-upnp/po/uk/upnp.po
+++ b/applications/luci-app-upnp/po/uk/upnp.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"PO-Revision-Date: 2021-03-12 09:02+0000\n"
-"Last-Translator: Tymofij Lytvynenko <till.svit@gmail.com>\n"
+"PO-Revision-Date: 2021-04-04 09:11+0000\n"
+"Last-Translator: Yurii Petrashko <yuripet@gmail.com>\n"
 "Language-Team: Ukrainian <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsupnp/uk/>\n"
 "Language: uk\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.5.2-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid ""
 "ACLs specify which external ports may be redirected to which internal "
@@ -27,7 +27,7 @@ msgid "Active UPnP Redirects"
 msgstr "Активні переспрямування UPnP"
 
 msgid "Advanced Settings"
-msgstr "Розширені налаштування"
+msgstr "Додаткові налаштування"
 
 msgid "Advertise as IGDv1 device instead of IGDv2"
 msgstr "Оголошувати як пристрій IGDv1 замість IGDv2"
@@ -94,7 +94,7 @@ msgid "External ports"
 msgstr "Зовнішні порти"
 
 msgid "General Settings"
-msgstr "Головні налаштування"
+msgstr "Загальні налаштування"
 
 msgid "Internal addresses"
 msgstr "Внутрішні адреси"
