--- a/applications/luci-app-wifischedule/po/sv/wifischedule.po
+++ b/applications/luci-app-wifischedule/po/sv/wifischedule.po
@@ -1,11 +1,20 @@
 msgid ""
-msgstr "Content-Type: text/plain; charset=UTF-8\n"
+msgstr ""
+"PO-Revision-Date: 2021-04-07 17:42+0000\n"
+"Last-Translator: Luna Jernberg <droidbittin@gmail.com>\n"
+"Language-Team: Swedish <https://hosted.weblate.org/projects/openwrt/"
+"luciapplicationswifischedule/sv/>\n"
+"Language: sv\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "Activate wifi"
 msgstr "Aktivera wifi"
 
 msgid "Could not find required /usr/bin/wifi_schedule.sh or /sbin/wifi"
-msgstr ""
+msgstr "Kunde inte hitta nödvändig /usr/bin/wifi_schedule.sh eller /sbin/wifi"
 
 msgid "Could not find required programm /usr/bin/iwinfo"
 msgstr ""
