--- a/modules/luci-base/po/fr/base.po
+++ b/modules/luci-base/po/fr/base.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-06-10 03:40+0200\n"
-"PO-Revision-Date: 2021-01-15 12:32+0000\n"
-"Last-Translator: Amaury <y0da@live.fr>\n"
+"PO-Revision-Date: 2021-04-09 08:04+0000\n"
+"Last-Translator: khorwood <khorwood@gmail.com>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/openwrt/luci/fr/"
 ">\n"
 "Language: fr\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.5-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "%s is untagged in multiple VLANs!"
 msgstr "%s est non-taggué dans plusieurs VLANs !"
@@ -4025,7 +4025,7 @@ msgid "untagged"
 msgstr "non marqué"
 
 msgid "yes"
-msgstr "Oui"
+msgstr "oui"
 
 msgid "« Back"
 msgstr "« Retour"
