--- a/modules/luci-base/po/tr/base.po
+++ b/modules/luci-base/po/tr/base.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2021-02-13 16:29+0000\n"
+"PO-Revision-Date: 2021-04-09 08:04+0000\n"
 "Last-Translator: Oğuz Ersen <oguzersen@protonmail.com>\n"
 "Language-Team: Turkish <https://hosted.weblate.org/projects/openwrt/luci/tr/"
 ">\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.5-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 msgid "%s is untagged in multiple VLANs!"
 msgstr "%s birçok VLAN'da etiketsiz!"
@@ -227,20 +227,20 @@ msgstr "Bu ağı etkinleştir"
 
 msgid "Active <abbr title=\"Internet Protocol Version 4\">IPv4</abbr>-Routes"
 msgstr ""
-"Aktif <abbr title=\"İnternet Protokolü Sürüm 4\">IPv4</abbr>-Yönlendiricileri"
+"Etkin <abbr title=\"İnternet Protokolü Sürüm 4\">IPv4</abbr>-Yönlendiricileri"
 
 msgid "Active <abbr title=\"Internet Protocol Version 6\">IPv6</abbr>-Routes"
 msgstr ""
-"Aktif <abbr title=\"İnternet Protokolü Sürüm 4\">IPv6</abbr>-Yönlendiricileri"
+"Etkin <abbr title=\"İnternet Protokolü Sürüm 4\">IPv6</abbr>-Yönlendiricileri"
 
 msgid "Active Connections"
-msgstr "Aktif Bağlantılar"
+msgstr "Etkin Bağlantılar"
 
 msgid "Active DHCP Leases"
-msgstr "Aktif DHCP Rezervasyonları"
+msgstr "Etkin DHCP Rezervasyonları"
 
 msgid "Active DHCPv6 Leases"
-msgstr "Aktif DHCPv6 Rezervasyonları"
+msgstr "Etkin DHCPv6 Rezervasyonları"
 
 msgid "Ad-Hoc"
 msgstr "Ad-Hoc"
@@ -1153,7 +1153,7 @@ msgid "Firmware File"
 msgstr ""
 
 msgid "Firmware Version"
-msgstr "Firmware Versiyon"
+msgstr "Ürün Yazılımı Sürümü"
 
 msgid "Fixed source port for outbound DNS queries"
 msgstr ""
@@ -1426,7 +1426,7 @@ msgid "IPv6 only"
 msgstr "Yalnızca IPv6"
 
 msgid "IPv6 prefix"
-msgstr ""
+msgstr "IPv6 ön eki"
 
 msgid "IPv6 prefix length"
 msgstr ""
@@ -1612,7 +1612,7 @@ msgid "Kernel Log"
 msgstr ""
 
 msgid "Kernel Version"
-msgstr "Çekirdek Versiyonu"
+msgstr "Çekirdek Sürümü"
 
 msgid "Key"
 msgstr ""
@@ -1875,7 +1875,7 @@ msgid "Maximum number of leased addresses."
 msgstr ""
 
 msgid "Mbit/s"
-msgstr ""
+msgstr "Mbit/s"
 
 msgid "Memory"
 msgstr "Bellek"
@@ -1905,7 +1905,7 @@ msgid "Mode"
 msgstr ""
 
 msgid "Model"
-msgstr ""
+msgstr "Model"
 
 msgid "Modem device"
 msgstr ""
@@ -2078,7 +2078,7 @@ msgid "Not associated"
 msgstr ""
 
 msgid "Not connected"
-msgstr ""
+msgstr "Bağlı değil"
 
 msgid "Note: Configuration files will be erased."
 msgstr ""
@@ -3529,8 +3529,7 @@ msgstr "Uyarı"
 
 msgid "Warning: There are unsaved changes that will get lost on reboot!"
 msgstr ""
-"Uyarı: Yeniden başlatılınca kaybedilecek henüz kaydedilmemiş değişiklikler "
-"var!"
+"Uyarı: Yeniden başlatılınca kaybedilecek kaydedilmemiş değişiklikler var!"
 
 msgid "Whether to create an IPv6 default route over the tunnel"
 msgstr ""
