luci-base: backport zh-cn translations for wifi option

--- a/modules/luci-base/po/zh-cn/base.po
+++ b/modules/luci-base/po/zh-cn/base.po
@@ -670,6 +670,20 @@ msgstr ""
 "杂度。此解决方法可能会导致互操作性问题，并降低密钥协商的可靠性，特别是在流量"
 "负载较重的环境中。"
 
+msgid ""
+"Configures data rates based on the coverage cell density. Normal configures "
+"basic rates to 6, 12, 24 Mbps if legacy 802.11b rates are not used else to "
+"5.5, 11 Mbps. High configures basic rates to 12, 24 Mbps if legacy 802.11b "
+"rates are not used else to the 11 Mbps rate. Very High configures 24 Mbps as "
+"the basic rate. Supported rates lower than the minimum basic rate are not "
+"offered."
+msgstr ""
+"根据无线信号覆盖密度来配置数据速率。Normal（正常）：如果不使用旧的 802.11b 速"
+"率，则将基础速率配置为 6、12、24 Mbps，否则配置为 5.5、11 Mbps。High（高）："
+"如果不使用旧的 802.11b 速率，则将基础速率配置为 12、24 Mbps，否则配置为 11 "
+"Mbps 速率。Very High（非常高）：配置 24 Mbps 为基础速率。不提供低于最低基础速"
+"率的支持速率。"
+
 msgid "Configuration"
 msgstr "配置"
 
@@ -702,6 +716,9 @@ msgstr "国家"
 
 msgid "Country Code"
 msgstr "国家代码"
+
+msgid "Coverage cell density"
+msgstr "无线信号覆盖密度"
 
 msgid "Cover the following interface"
 msgstr "包括以下接口"
@@ -1381,6 +1398,9 @@ msgstr "Hermes 802.11b 无线控制器"
 
 msgid "Hide <abbr title=\"Extended Service Set Identifier\">ESSID</abbr>"
 msgstr "隐藏 <abbr title=\"Extended Service Set Identifier\">ESSID</abbr>"
+
+msgid "High"
+msgstr "高"
 
 msgid "Host"
 msgstr "主机"
@@ -3634,6 +3654,9 @@ msgstr "验证"
 
 msgid "Version"
 msgstr "版本"
+
+msgid "Very High"
+msgstr "非常高"
 
 msgid "WDS"
 msgstr "WDS"
