treewide: backport translate for 'Sync with NTP-Server'

--- a/modules/luci-base/po/en/base.po
+++ b/modules/luci-base/po/en/base.po
@@ -3024,6 +3024,9 @@ msgstr ""
 msgid "Switch protocol"
 msgstr ""
 
+msgid "Sync with NTP-Server"
+msgstr ""
+
 msgid "Sync with browser"
 msgstr ""
 
