--- a/modules/luci-base/po/zh-cn/base.po
+++ b/modules/luci-base/po/zh-cn/base.po
@@ -3112,6 +3112,9 @@ msgstr "交换机 VLAN"
 msgid "Switch protocol"
 msgstr "切换协议"
 
+msgid "Sync with NTP-Server"
+msgstr "与 NTP 服务器同步"
+
 msgid "Sync with browser"
 msgstr "同步浏览器时间"
 
