--- a/modules/luci-base/po/zh-tw/base.po
+++ b/modules/luci-base/po/zh-tw/base.po
@@ -3038,6 +3038,9 @@ msgstr "交換器 VLAN"
 msgid "Switch protocol"
 msgstr "切換協定"
 
+msgid "Sync with NTP-Server"
+msgstr "與 NTP 伺服器同步"
+
 msgid "Sync with browser"
 msgstr "與瀏覽器同步時間"
 
