--- a/applications/luci-app-cpufreq/po/zh_Hans/cpufreq.po
+++ b/applications/luci-app-cpufreq/po/zh_Hans/cpufreq.po
@@ -1,5 +1,5 @@
 msgid "CPU Freq"
-msgstr "CPU 性能优化调节"
+msgstr "CPU 性能优化"
 
 msgid "CPU Freq Settings"
 msgstr "CPU 性能优化调节设置"
@@ -30,3 +30,18 @@ msgstr "CPU 切换频率触发阈值"
 
 msgid "Kernel make a decision on whether it should increase the frequency (%)"
 msgstr "当 CPU 占用率超过 (%) 的情况下触发内核切换频率"
+
+msgid "Policy 0"
+msgstr "方案 0"
+
+msgid "Policy 1"
+msgstr "方案 1"
+
+msgid "ondemand"
+msgstr "节能"
+
+msgid "userspace"
+msgstr "普通"
+
+msgid "performance"
+msgstr "性能"
