luci-app-ssr-plus: sync with upstream source
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/applications/luci-app-ssr-plus/po/zh_Hans/ssr-plus.po
+++ b/applications/luci-app-ssr-plus/po/zh_Hans/ssr-plus.po
@@ -445,8 +445,14 @@ msgstr "SS/SSR/V2/TROJAN订阅URL"
 msgid "Subscribe Filter Words"
 msgstr "订阅节点关键字过滤"
 
+msgid "Subscribe Save Words"
+msgstr "订阅节点关键字保留检查"
+
 msgid "Filter Words splited by /"
 msgstr "命中关键字的节点将被丢弃。多个关键字用 / 分隔"
+
+msgid "Save Words splited by /"
+msgstr "命中关键字的节点将被保留。多个关键字用 / 分隔。此项为空则不启用保留匹配"
 
 msgid "Update"
 msgstr "更新"
@@ -744,6 +750,9 @@ msgstr "指纹伪造"
 
 msgid "Reapply"
 msgstr "重新应用"
+
+msgid "Apply"
+msgstr "应用"
 
 msgid "Enable Netflix Mode"
 msgstr "启用 Netflix 分流模式"
