--- a/modules/luci-base/po/zh-cn/base.po
+++ b/modules/luci-base/po/zh-cn/base.po
@@ -1229,6 +1229,12 @@ msgstr "固件文件"
 msgid "Firmware Version"
 msgstr "固件版本"
 
+msgid "Architecture"
+msgstr "架构"
+
+msgid "Target Platform"
+msgstr "目标平台"
+
 msgid "Fixed source port for outbound DNS queries"
 msgstr "指定的 DNS 查询源端口"
 
