luci-app-baidupcs-web: code alignment

--- a/applications/luci-app-baidupcs-web/po/zh_Hans/baidupcs-web.po
+++ b/applications/luci-app-baidupcs-web/po/zh_Hans/baidupcs-web.po
@@ -22,6 +22,10 @@ msgstr ""
 msgid "BaiduPCS-Web"
 msgstr ""
 
+#: /mnt/A/openwrt-latest/package/ctcgfw/luci-app-baidupcs-web/luasrc/view/baidupcs-web/baidupcs-web_status.htm:13
+msgid "Open Web Interface"
+msgstr "打开管理页面"
+
 #: /mnt/A/openwrt-latest/package/ctcgfw/luci-app-baidupcs-web/luasrc/view/baidupcs-web/baidupcs-web_status.htm:36
 msgid "Collecting data..."
 msgstr ""
