luci-app-k3screenctrl: code alignment

--- a/applications/luci-app-k3screenctrl/po/zh_Hans/k3screenctrl.po
+++ b/applications/luci-app-k3screenctrl/po/zh_Hans/k3screenctrl.po
@@ -1,14 +1,11 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=UTF-8\n"
 
-msgid "Screen"
+msgid "K3 Screen"
 msgstr "屏幕"
 
 msgid "Customize your device screen"
 msgstr "自定义你的设备屏幕"
-
-msgid "General Setting"
-msgstr "基本设置"
 
 msgid "Screen time :"
 msgstr "亮屏时间："
