--- a/applications/luci-app-mwan3helper/po/zh_Hans/mwan3helper.po
+++ b/applications/luci-app-mwan3helper/po/zh_Hans/mwan3helper.po
@@ -20,5 +20,8 @@ msgstr "IPSet列表"
 msgid "MWAN3 Helper generate IPSets"
 msgstr "自动生成中国地址段和各大ISP运营商的 IPSet 地址段，并解决国外域名的污染问题，帮助MWAN3分流 ISP/WireGuard 等"
 
+msgid "Enable DNS anti-pollution and turn on GFW IPSet (cannot be turned on at the same time as SSR's GFW list mode)"
+msgstr "启用 DNS 防污染并打开GFW IPSet（与SSR的GFW列表模式不能同时开启）"
+
 msgid "Enable GFW IPSet"
 msgstr "启用 GFW IPSet"
