luci-app-n2n_v3: pull updates from Lean

--- a/applications/luci-app-n2n_v3/po/zh_Hans/n2n_v3.po
+++ b/applications/luci-app-n2n_v3/po/zh_Hans/n2n_v3.po
@@ -50,6 +50,9 @@ msgstr "N2N Supernode节点设置"
 msgid "Port"
 msgstr "端口"
 
+msgid "DHCP Subnet"
+msgstr "子网IP段"
+
 msgid "Supernode Port"
 msgstr "Supernode节点端口"
 
@@ -59,11 +62,11 @@ msgstr "第二Supernode节点端口"
 msgid "Encryption key"
 msgstr "加密密钥"
 
-msgid "<b style='color:green;'>N2N v2 VPN is running.</b>"
-msgstr "<b style='color:green;'>N2N v2 VPN 运行中</b>"
+msgid "<b style='color:green;'>N2N v3 VPN is running.</b>"
+msgstr "<b style='color:green;'>N2N v3 VPN 运行中</b>"
 
-msgid "<b style='color:red;'>N2N v2 VPN is not running.</b>"
-msgstr "<b style='color:red;'>N2N v2 VPN 未运行</b>"
+msgid "<b style='color:red;'>N2N v3 VPN is not running.</b>"
+msgstr "<b style='color:red;'>N2N v3 VPN 未运行</b>"
 
 msgid "N2N routes"
 msgstr "路由表"
