luci-app-n2n_v3: make IP masquerade an option

--- a/applications/luci-app-n2n_v3/po/zh_Hans/n2n_v3.po
+++ b/applications/luci-app-n2n_v3/po/zh_Hans/n2n_v3.po
@@ -44,6 +44,12 @@ msgstr "N2N网络组名称"
 msgid "Enable packet forwarding"
 msgstr "启用数据包转发"
 
+msgid "Enable IP masquerade"
+msgstr "IP动态伪装"
+
+msgid "Make packets from LAN to other edge nodes appear to be sent from the tunnel IP. This can make setting up your firewall easier"
+msgstr "使局域网发往其他边缘节点的数据包看起来像是从接口IP发出的。这也许能帮助你方便地设置防火墙"
+
 msgid "N2N Supernode Settings"
 msgstr "N2N Supernode节点设置"
 
