luci-app-gowebdav: download reg file via javascript

--- a/applications/luci-app-gowebdav/po/zh_Hans/gowebdav.po
+++ b/applications/luci-app-gowebdav/po/zh_Hans/gowebdav.po
@@ -25,8 +25,11 @@ msgstr "开放目录"
 msgid "Read-Only Mode"
 msgstr "只读模式"
 
-msgid "<input type=\"button\" class=\"cbi-button cbi-button-apply\" value=\"Download Reg File\" onclick=\"window.open('https://raw.githubusercontent.com/1715173329/gowebdav/master/allow_http.reg')\" />"
-msgstr "<input type=\"button\" class=\"cbi-button cbi-button-apply\" value=\"下载注册表文件\" onclick=\"window.open('https://raw.githubusercontent.com/1715173329/gowebdav/master/allow_http.reg')\" />"
+msgid "Download Reg File"
+msgstr "下载注册表文件"
+
+msgid "Click Download"
+msgstr "点击下载"
 
 msgid "Windows doesn't allow HTTP auth by default, you need to import this reg key to enable it (Reboot needed)."
 msgstr "Windows 系统默认不允许 HTTP 鉴权，您需要手动导入注册表文件以开启此功能（需重启）。"
