--- a/applications/luci-app-turboacc/po/zh_Hans/turboacc.po
+++ b/applications/luci-app-turboacc/po/zh_Hans/turboacc.po
@@ -46,11 +46,17 @@ msgstr "BBR 拥塞控制算法"
 msgid "Using BBR CCA can improve TCP network performance effectively"
 msgstr "使用 BBR 拥塞控制算法可以有效提升 TCP 网络性能"
 
-msgid "FullCone NAT"
-msgstr "全锥形 NAT"
+msgid "IPv4 FullCone NAT"
+msgstr "IPv4 全锥形 NAT"
+
+msgid "IPv6 FullCone NAT"
+msgstr "IPv6 全锥形 NAT"
 
 msgid "Using FullCone NAT can improve gaming performance effectively"
 msgstr "使用全锥形 NAT 可以有效提升游戏体验"
+
+msgid "Enable extra IPv6 FullCone NAT, most IPv6 traffic do NOT need this"
+msgstr "额外开启 IPv6 协议全锥形 NAT, 大部分时候无需开启"
 
 msgid "DNS Caching"
 msgstr "DNS 缓存"
