luci-app-bitsrunlogin-go: add option for duration
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/applications/luci-app-bitsrunlogin-go/po/zh_Hans/bitsrunlogin-go.po
+++ b/applications/luci-app-bitsrunlogin-go/po/zh_Hans/bitsrunlogin-go.po
@@ -17,7 +17,11 @@ msgstr "深澜校园网自动登录工具。"
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:52
 #: applications/luci-app-bitsrunlogin-go/root/usr/share/luci/menu.d/luci-app-bitsrunlogin-go.json:3
 msgid "BitSrunLogin-Go"
-msgstr ""
+msgstr "BitSrunLogin-Go"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:109
+msgid "Check interval"
+msgstr "检查间隔"
 
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:82
 msgid "China Mobile (cmcc)"
@@ -52,11 +56,11 @@ msgstr "授予访问 BitSrunLogin-Go 配置的权限"
 msgid "ISP type"
 msgstr "运营商类型"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:109
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:115
 msgid "Interface name"
 msgstr "接口名称"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:110
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:116
 msgid ""
 "Interface name in regex, e.g. \"eth0\\.[2-3]\".<br/>Multi-interfaces mode "
 "will be enabled if not empty."
@@ -89,6 +93,10 @@ msgstr "连接最长允许时间。"
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:36
 msgid "NOT RUNNING"
 msgstr "未运行"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:110
+msgid "Network connectivity check interval."
+msgstr "网络连通性检查间隔。"
 
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:90
 msgid "Password"
