--- a/applications/luci-app-bitsrunlogin-go/po/zh_Hans/bitsrunlogin-go.po
+++ b/applications/luci-app-bitsrunlogin-go/po/zh_Hans/bitsrunlogin-go.po
@@ -40,6 +40,10 @@ msgstr "中国联通（cucc）"
 msgid "Collecting data..."
 msgstr "收集数据中..."
 
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:118
+msgid "Debug mode"
+msgstr "调试模式"
+
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:72
 msgid "Enable"
 msgstr "启用"
@@ -89,6 +93,10 @@ msgstr "登录地址"
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:104
 msgid "Maximum time allowed for connection."
 msgstr "连接最长允许时间。"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:119
+msgid "More granular information will be given in log."
+msgstr "日志中将打印更多详细信息。"
 
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:36
 msgid "NOT RUNNING"
