--- a/applications/luci-app-bitsrunlogin-go/po/zh_Hans/bitsrunlogin-go.po
+++ b/applications/luci-app-bitsrunlogin-go/po/zh_Hans/bitsrunlogin-go.po
@@ -8,57 +8,101 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:53
-msgid "Bit Srun auto login tool."
-msgstr "深澜校园网自动登录工具。"
-
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:34
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:36
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:52
 #: applications/luci-app-bitsrunlogin-go/root/usr/share/luci/menu.d/luci-app-bitsrunlogin-go.json:3
 msgid "BitSrunLogin-Go"
-msgstr "BitSrunLogin-Go"
+msgstr "深澜登录器"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:109
-msgid "Check interval"
-msgstr "检查间隔"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:34
+msgid "RUNNING"
+msgstr "运行中"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:82
-msgid "China Mobile (cmcc)"
-msgstr "中国移动（cmcc）"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:36
+msgid "NOT RUNNING"
+msgstr "未运行"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:83
-msgid "China Telecom (ctcc)"
-msgstr "中国电信（ctcc）"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:84
-msgid "China Unicom (cucc)"
-msgstr "中国联通（cucc）"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:53
+msgid "Bit Srun auto login tool."
+msgstr "深澜校园网自动登录工具。"
 
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:66
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:37
 msgid "Collecting data..."
 msgstr "收集数据中..."
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:118
-msgid "Debug mode"
-msgstr "调试模式"
-
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:72
 msgid "Enable"
 msgstr "启用"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:76
+msgid "Login address"
+msgstr "登录地址"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:80
+msgid "ISP type"
+msgstr "运营商类型"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:81
+msgid ""
+"See <a href=\"https://github.com/Mmx233/BitSrunLoginGo\" "
+"target=\"_blank\">Mmx233/BitSrunLoginGo</a> for details."
+msgstr ""
+"详见 <a href=\"https://github.com/Mmx233/BitSrunLoginGo\" "
+"target=\"_blank\">Mmx233/BitSrunLoginGo</a>。"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:82
+msgid "Leave Empty"
+msgstr "留空"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:83
+msgid "China Mobile (cmcc)"
+msgstr "中国移动（cmcc）"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:84
+msgid "China Telecom (ctcc)"
+msgstr "中国电信（ctcc）"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:85
+msgid "China Unicom (cucc)"
+msgstr "中国联通（cucc）"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:87
+msgid "Username"
+msgstr "用户名"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:90
+msgid "Password"
+msgstr "密码"
 
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:94
 msgid "Enable HTTPS"
 msgstr "启用 HTTPS"
 
-#: applications/luci-app-bitsrunlogin-go/root/usr/share/rpcd/acl.d/luci-app-bitsrunlogin-go.json:3
-msgid "Grant access to BitSrunLogin-Go configuration"
-msgstr "授予访问 BitSrunLogin-Go 配置的权限"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:95
+msgid "Use HTTPS to login."
+msgstr "使用 HTTPS 登录。"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:80
-msgid "ISP type"
-msgstr "运营商类型"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:99
+msgid "Skip certificate check"
+msgstr "跳过证书检查"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:103
+msgid "Timeout"
+msgstr "超时"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:104
+msgid "Maximum time allowed for connection."
+msgstr "连接最长允许时间。"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:109
+msgid "Check interval"
+msgstr "检查间隔"
+
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:110
+msgid "Network connectivity check interval."
+msgstr "网络连通性检查间隔。"
 
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:115
 msgid "Interface name"
@@ -70,82 +114,41 @@ msgid ""
 "will be enabled if not empty."
 msgstr "网卡名称正则，如 \"eth0\\.[2-3]\"。<br/>不为空时为多网卡模式。"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:35
-msgid "Loading..."
-msgstr "加载中..."
-
-#: applications/luci-app-bitsrunlogin-go/root/usr/share/luci/menu.d/luci-app-bitsrunlogin-go.json:22
-msgid "Log"
-msgstr "日志"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:53
-msgid "Log file does not exist."
-msgstr "日志文件不存在。"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:44
-msgid "Log is clean."
-msgstr "日志为空。"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:76
-msgid "Login address"
-msgstr "登录地址"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:104
-msgid "Maximum time allowed for connection."
-msgstr "连接最长允许时间。"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:118
+msgid "Debug mode"
+msgstr "调试模式"
 
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:119
 msgid "More granular information will be given in log."
 msgstr "日志中将打印更多详细信息。"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:36
-msgid "NOT RUNNING"
-msgstr "未运行"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:35
+msgid "Loading..."
+msgstr "加载中..."
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:110
-msgid "Network connectivity check interval."
-msgstr "网络连通性检查间隔。"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:44
+msgid "Log is clean."
+msgstr "日志为空。"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:90
-msgid "Password"
-msgstr "密码"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:34
-msgid "RUNNING"
-msgstr "运行中"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:70
-msgid "Refresh every %s seconds."
-msgstr "每 %s 秒刷新。"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:81
-msgid ""
-"See <a href=\"https://github.com/Mmx233/BitSrunLoginGo\" target=\"_blank"
-"\">Mmx233/BitSrunLoginGo</a> for details."
-msgstr ""
-"详见 <a href=\"https://github.com/Mmx233/BitSrunLoginGo\" target=\"_blank"
-"\">Mmx233/BitSrunLoginGo</a>。"
-
-#: applications/luci-app-bitsrunlogin-go/root/usr/share/luci/menu.d/luci-app-bitsrunlogin-go.json:14
-msgid "Settings"
-msgstr "设置"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:99
-msgid "Skip certificate check"
-msgstr "跳过证书检查"
-
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:103
-msgid "Timeout"
-msgstr "超时"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:53
+msgid "Log file does not exist."
+msgstr "日志文件不存在。"
 
 #: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:57
+#, javascript-format
 msgid "Unknown error: %s"
 msgstr "未知错误：%s"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:95
-msgid "Use HTTPS to login."
-msgstr "使用 HTTPS 登录。"
+#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/log.js:70
+#, javascript-format
+msgid "Refresh every %s seconds."
+msgstr "每 %s 秒刷新。"
 
-#: applications/luci-app-bitsrunlogin-go/htdocs/luci-static/resources/view/bitsrunlogin-go/base.js:87
-msgid "Username"
-msgstr "用户名"
+#~ msgid "Grant access to BitSrunLogin-Go configuration"
+#~ msgstr "授予访问 BitSrunLogin-Go 配置的权限"
+
+#~ msgid "Log"
+#~ msgstr "日志"
+
+#~ msgid "Settings"
+#~ msgstr "设置"
