--- a/applications/luci-app-turboacc/po/zh_Hans/turboacc.po
+++ b/applications/luci-app-turboacc/po/zh_Hans/turboacc.po
@@ -1,5 +1,12 @@
 msgid ""
-msgstr "Content-Type: text/plain; charset=UTF-8\n"
+msgstr ""
+"Content-Type: text/plain; charset=UTF-8\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: zh-Hans\n"
+"MIME-Version: 1.0\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:89
 msgid "Acceleration Status"
