luci-app-turboacc: fix support for mtkhnat
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/applications/luci-app-turboacc/po/templates/turboacc.pot
+++ b/applications/luci-app-turboacc/po/templates/turboacc.pot
@@ -83,11 +83,11 @@ msgid "IPv6 acceleration"
 msgstr ""
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:126
-msgid "Mediatek HNAT"
+msgid "MediaTek HNAT"
 msgstr ""
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:140
-msgid "Mediatek's open source hardware flow offloading engine."
+msgid "MediaTek's open source hardware flow offloading engine."
 msgstr ""
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:117
