--- a/applications/luci-app-turboacc/po/zh_Hans/turboacc.po
+++ b/applications/luci-app-turboacc/po/zh_Hans/turboacc.po
@@ -90,11 +90,11 @@ msgid "IPv6 acceleration"
 msgstr "IPv6 加速"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:126
-msgid "Mediatek HNAT"
-msgstr "Mediatek HNAT"
+msgid "MediaTek HNAT"
+msgstr "MediaTek HNAT"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:140
-msgid "Mediatek's open source hardware flow offloading engine."
+msgid "MediaTek's open source hardware flow offloading engine."
 msgstr "由联发科实现的开源硬件流量分载引擎。"
 
 #: applications/luci-app-turboacc/htdocs/luci-static/resources/view/turboacc.js:117
