luci-app-smartdns: fix typo

--- a/applications/luci-app-smartdns/po/zh_Hans/smartdns.po
+++ b/applications/luci-app-smartdns/po/zh_Hans/smartdns.po
@@ -23,7 +23,7 @@ msgstr "额外的规则标识，具体参考domain-rule的帮助说明。"
 #: applications/luci-app-smartdns/htdocs/luci-static/resources/view/smartdns/smartdns.js:811
 #: applications/luci-app-smartdns/htdocs/luci-static/resources/view/smartdns/smartdns.js:1015
 msgid "Additional Rule Flag"
-msgstr "额外的服务器参数"
+msgstr "额外的规则标识"
 
 #: applications/luci-app-smartdns/htdocs/luci-static/resources/view/smartdns/smartdns.js:717
 msgid "Additional Server Args"
